--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,59 @@
-*,
-::before,
-::after {
+@import 'https://fonts.googleapis.com/css?family=Lato:400,700';
+*{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-html {
-  font-size:85%;
+body {
+  background-color: #eee;
+  font-family: 'Lato', sans-serif;
 }
 
-body {
-  font-family: 'Baskervville', serif;
+#page-wrapper {
+  position: relative;
 }
 
 .page-header{
     display:flex;
     flex-direction: row;
-   justify-content:space-between;
-    width:100%;
-    height:75px;
+   justify-content:space-around;
+   align-items: center;
+   min-height: 75px;
+   padding: 0px 20px;
     margin:0 2px 15px;
     position: fixed;
     top:0;
-    bottom:0;
-    background-color: gray;
+    background-color: #eee;
+    color: #000;
 }
 
+.logo {
+  width: 60vw;
+  }
 
-img{
-    width:18rem;
-    height:30px;
-    margin-left: 25px;
-
+.logo > img {
+  width: 100%;
+  height: 100%;
+  max-width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-left: 20px;
 }
+
+nav {
+  font-weight: 400;
+}
+
+nav > ul {
+  width: 35vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
 
 nav > ul > li {
     list-style-type: none;
@@ -41,11 +61,12 @@ nav > ul > li {
     margin:6px 30px;
     font-size: 18px;
     text-align: center;
+    
 }
 
 a{
     text-decoration: none;
-    color:black
+    color:#000;
 }
 
 a:hover{
@@ -58,25 +79,33 @@ a:link{
 }
 
 main{
-  margin-top:100px;
+  max-width: 1000px;
+  width: 100%;
+  margin: 100px auto 40px
 }
 
 .sub-header{
-    text-align: center;
-    margin-top:15px;
-    padding-top:5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 200px;
+  margin-top: 50px;
 }
 
 h1 {
-  font-family: sans-serif, Arial;
   font-size: 26px;
-  margin:5px auto;
+  margin:5px auto 20px;
+  word-wrap: break-word;
+
 }
 
 #email{
   margin: 10px auto;
-  height:28px;
   width:260px;
+  max-width: 275px;
+  padding: 5px;
   background-color:white;
   border:1px solid gray;
 }
@@ -85,12 +114,12 @@ h1 {
   height:35px;
   width:150px;
   border: none;
-  background-color: #f7d206ce;
-  color: #000;
-  font-size: 18px;
-  font-weight: bold;
+  font-weight: 900;
+  border:none;
+  border-radius: 2px;
+  cursor: pointer;
+  background-color: #f1c40f;
 }
-
 .page-details{
   margin:50px 150px;
   text-align: left;
@@ -104,12 +133,11 @@ h1 {
 
 .icons{
   font-size: 45px;
-  color:rgb(248, 164, 8);
+  color:darkorange;
   margin-right:60px;
 }
 
 .page-text{
-  font-family: 'Arial', sans-serif;
   font-size: 25px;
   font-weight:bolder;
   margin-left:10px;
@@ -120,7 +148,6 @@ h1 {
 }
 
 .page-subtext{
-  font-family: 'Arial', sans-serif;
   margin-left:130px ;
   margin-bottom: 25px;
   line-height: 20px;
@@ -154,7 +181,7 @@ h1 {
   margin-bottom:10px;
   height:10%;
   font-size: 16px;
-  font-weight: bold;
+  font-weight:700;
   
 }
 
@@ -170,27 +197,31 @@ h1 {
 .card-footer{
   height:10%;
   margin: 2px 50px;
- background-color:#f7d206ce ;
- font-weight: bold;
+ background-color:#f1c40f ;
+ font-weight:400;
  
 }
 
 .page-footer{
-  background-color: grey;
+  background-color: #ddd;
   display:flex;
   flex-direction: row;
+  justify-content: space-between;
+}
+.page-footer > ul{
+  display: flex;
   justify-content: flex-start;
-  padding:0 70px;
+  flex-direction: row;
 }
 
-.footer-lists{
-  display: inline-block;
-  list-style-type: none;
+ .footer-lists{
   margin:10px;
+  list-style-type: none;
 }
 
-.copyright{
-  margin-top: 10px;
+.copyright {
+  font-size: 0.9em;
+  color: #444;
 }
 
 
@@ -198,15 +229,11 @@ h1 {
  @media  only screen and (max-width:600px) {
 
   .page-header{
-    margin:0 2px 15px;
-    padding:20px 5px;
+    flex-wrap:wrap;
 
 }
-  img{
-    width:10rem;
-    height:20px;
-    margin-right: 5px;
-
+header {
+  flex-wrap: wrap;
 }
 
 nav > ul > li {
@@ -263,22 +290,51 @@ h1{
   }
 
   .page-footer{
-      padding-left: 30px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
   }
 
-  .footer-lists{
-    display:inline-block;
-    list-style-type: none;
-    margin:9px
+ /*small devices (portraits tablets, and large phones of max-width 650px)*/
+
+ @media (max-width: 650px) {
+  .logo {
+    margin-top: 15px;
+    width: 100%;
+    position: relative;
   }
 
-  .copyright{
-    margin: 10px auto;
+  .logo > img {
+    margin: 0 auto;
   }
- }
+
+  nav {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0 50px;
+  }
+  nav li {
+    padding-bottom: 5px;
+  }
+
+  nav > ul {
+    flex-direction: column;
+  }
+  .sub-header {
+    margin-top: 120px;
+  }
+}
+
+}
+
 
  /*small devices (portraits tablets, and large phones, 600px and up)*/
  @media  only screen and (min-width:600px) {
+  
   .page-details{
     margin:20px 30px;
     text-align: left;
