--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,11 @@ h1 {
   cursor: pointer;
   background-color: #f1c40f;
 }
+
+#submit:hover{
+  background-color: orange;
+  transition: background-color 1s;
+}
 .page-details{
   margin:50px 150px;
   text-align: left;
@@ -197,6 +202,15 @@ h1 {
  
 }
 
+a{
+  text-decoration:none;
+}
+
+.card-footer > a:hover{
+  background-color: orange;
+  transition: background-color 1s;
+}
+
 .page-footer{
   background-color: #ddd;
   display:flex;
@@ -218,8 +232,17 @@ h1 {
   font-size: 0.9em;
   color: #444;
 }
+/*extra small device with max-width of 550px*/
+@media (max-width: 550px) {
+  
+  h1{
+    margin-top:25px;
+  }
 
-
+  .icons{
+    display:none;
+  }
+}
 /*Extra small devices (phones, 600px and down)*/
  @media  only screen and (max-width:600px) {
 
