--- a/styles.css
+++ b/styles.css
@@ -197,8 +197,9 @@ h1 {
 .card-footer{
   height:10%;
   margin: 2px 50px;
- background-color:#f1c40f ;
- font-weight:400;
+  background-color:#f1c40f ;
+  color:#000;
+  font-weight:400;
  
 }
 
